Add SimpleGameTest together with junit assertions